# freefilevenv

./: README.md  pyproject.toml
src/freefilevenv/: __init__.py  config.py  tui.py
